# plover-textarea

./: MANIFEST.in  README.md  setup.cfg
plover_textarea/: __init__.py  config.py  extension.py
