[metadata]
name = plover-textarea
version = 0.0.0
author = user202729
description = Display a text area that can be controlled from other plugins or strokes.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages = plover_textarea

[options.entry_points]
plover.extension =
	plover_textarea = plover_textarea.extension:Main
plover.command =
	textarea_write = plover_textarea:write_command
	textarea_clear = plover_textarea:clear_command
	textarea_close = plover_textarea:close_command
